log
mi., 11 de may. de 2022 22:48:33: 
 tests:  0|5
total_score: 0/70
2fdd249
mi., 11 de may. de 2022 23:01:13: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  0|5
total_score: 0/70
54f5495
mi., 11 de may. de 2022 23:03:33: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0ab11c0
mi., 11 de may. de 2022 23:45:29: 
 sudoku.c | 54 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 54 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function 'is_valid_submatrix':
sudoku.c:87:7: error: variable 'valoresAux' set but not used [-Werror=unused-but-set-variable]
   int valoresAux[9];
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ec5f91c
mi., 11 de may. de 2022 23:48:49: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|4
total_score: 15/70
c44c61c
mi., 11 de may. de 2022 23:50:19: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
aa7fa11
mi., 11 de may. de 2022 23:54:41: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|4
total_score: 15/70
5fdb74b
mi., 11 de may. de 2022 23:59:22: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
e24e59d
ju., 12 de may. de 2022  0:03:22: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d088bf0
ju., 12 de may. de 2022  0:04:01: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|4
total_score: 15/70
efa7522
ju., 12 de may. de 2022  0:05:40: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
63cb03e
ju., 12 de may. de 2022  0:06:08: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
a679013
ju., 12 de may. de 2022  0:06:51: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  5|3
total_score: 35/70
dd6cb61
ju., 12 de may. de 2022  0:10:28: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  6|2
total_score: 45/70
8741767
ju., 12 de may. de 2022  0:11:47: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:138:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
53f33da
ju., 12 de may. de 2022  0:12:30: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0c0d818
ju., 12 de may. de 2022  0:16:58: 
 sudoku.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
b9d729b
ju., 12 de may. de 2022  0:25:29: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  7|1
total_score: 55/70
5e99635
ju., 12 de may. de 2022  0:25:58: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|1
total_score: 55/70
a580146
